--- a/about.html
+++ b/about.html
@@ -131,8 +131,9 @@
 					<h4>Mr Sreenath A.M.</h4>
 					<p>Asst. Professor,Mechanical Engineering Department,<br> NIT-Calicut, Kozhikode, PIN: 673601,</p>
 				</div>
-				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<img src="images/alumni/jothi.jpg" style="width: 250px;height: 300px" alt="" >
+				<div class="col-md-4 wow fadeInDown " data-wow-duration="1000ms" data-wow-delay="600ms">
+					<img  style="width: 250px;height: 300px" src="images/alumni/jothi.jpg"  alt="" >
+                                        
 					<h4>Dr.T. J. Sarvoththama Jothi </h4>
 					<p>Asst. Professor,Mechanical Engineering Department,<br> NIT-Calicut, Kozhikode, PIN: 673601,</p>  
 				</div>
@@ -148,9 +149,8 @@
 					<div class="col-md-4">
 						<ul class="social-network">
 							<li><a href="https://www.facebook.com/UnwiredAeroNitCalicut/" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/aerounwired/" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/aerounwired/" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
 							<li><a href="https://www.youtube.com/channel/UCjcbbcK1VAgwusNnKY3JDrQ" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
 						</ul>	
 					</div>
