--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
            
 		<div class="container">
                     <div class="text-center" >
-				<h2>Projects</h2>
+				<h2 >Projects</h2>
 			</div>
                     <div class="text-center">
                                     <div class="col-md-3">
@@ -250,11 +250,10 @@
 					<div class="col-md-4">
 						<ul class="social-network">
 							<li><a href="https://www.facebook.com/UnwiredAeroNitCalicut/" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/aerounwired/" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/aerounwired/" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
 							<li><a href="https://www.youtube.com/channel/UCjcbbcK1VAgwusNnKY3JDrQ" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
-							</ul>	
+						</ul>	
 					</div>
 				</div>
 				
