--- a/alumni.html
+++ b/alumni.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alumni</title>
+    <meta name="description" content="Deals with Rc Aircrafts and other aerospace related activities">
+  <meta name="keywords" content="Marketing,New Drone Tech,Innovative Projects">
+  <meta name="author" content="Aerounwired">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Aerounwired - Alumni</title>
+  <link rel="shortcut icon" href="images/title/AERO1.ico" />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -110,7 +116,7 @@
 					<div class="col-md-4">
 						<ul class="social-network">
 							<li><a href="https://www.facebook.com/UnwiredAeroNitCalicut/" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="https://www.linkedin.com/company/aerounwired/" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://twitter.com/aero_unwired" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="https://www.linkedin.com/company/aerounwired/" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
 							<li><a href="https://www.youtube.com/channel/UCjcbbcK1VAgwusNnKY3JDrQ" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
 						</ul>	
