--- a/project.html
+++ b/project.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Projects</title>
+    <meta name="description" content="Deals with Rc Aircrafts and other aerospace related activities">
+  <meta name="keywords" content="Marketing,New Drone Tech,Innovative Projects">
+  <meta name="author" content="Aerounwired">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <title>Aerounwired - Projects</title>
+  <link rel="shortcut icon" href="images/title/AERO1.ico" />
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -18,6 +23,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  
   </head>
   <body>
 	<header>		
@@ -53,7 +59,7 @@
 		</nav>	
 
 	</header>
-	<div style="background-color:black" id="breadcrumb">
+	<div id="drone" style="background-color:black" id="breadcrumb">
 		<div  class="container">	
 			<div style="background-color:rgba(72,61,139,0);color:white" class="breadcrumb">							
 				<li ><a  href="index.html">Home</a></li>
@@ -62,9 +68,9 @@
 		</div>	
 	</div>
 	
-	<div class="services">
+	<div  class="services">
 		<div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                    <h3>Drone</h3>
+                    <h3 >Drone</h3>
 			<hr>
 			<div  class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
                            <img src="images/projects/ddrone.jpg" class="img-responsive ">
@@ -84,8 +90,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 							</div>
 							<div class="media-body">
 								<h4 class="media-heading">Aim</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat 
-								libero, pulvinar tincidunt leo consectetur eget.</p>
+								<p>To study the design and modifications of different kinds of drones specifically multi-rotors also known as multi-coptors which has simpler rotor mechanics required for flight control.</p>
 							</div>
 						</li>
 						<li>
@@ -94,18 +99,16 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 							</div>
 							<div class="media-body">
 								<h4 class="media-heading">Approach</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat 
-								libero, pulvinar tincidunt leo consectetur eget.</p>
+								<p>Drone technology is constantly evolving as new innovation and big investment are bringing more advanced drones.aim is to Identify these new problms and accordingly design and modify quadcoptors. Some of the modification includes adding gps,  Obstacle Detection And Collision Avoidance Technology and adding different sensors to gesture controlled drones.</p>
 							</div>
 						</li>
 						<li>
 							<div class="media-left">
 								<i class="fa fa-rocket"></i>						
 							</div>
-							<div class="media-body">
+							<div id="vtol" class="media-body">
 								<h4 class="media-heading">Progress</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat 
-								libero, pulvinar tincidunt leo consectetur eget.</p>
+								<p>Design completed.Fabrication started</p>
 							</div>
 						</li>
 					</ul>
@@ -117,7 +120,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 	
 	<div class="sub-services">
 		<div class="container wow fadeInDown" delay-wow-duration="2000ms" delay-wow-delay="600ms">
-                    <h3><b>Vertical Landing And Take-Off ( VTOL )</b></h3>
+                    <h3 ><b>Vertical Landing And Take-Off ( VTOL )</b></h3>
                     <hr>
 			<div class="col-md-6">
 				<div class="media">
@@ -153,16 +156,16 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 				</div>
 			</div>
 						
-			<div class="col-md-6">
+			<div  class="col-md-6">
 				<img src="images/projects/vtol1.jpg" class="img-responsive">
-				<p>Vertical Take Off and Landing aims to eliminate the need for runways for aircrafts. In theory, it should offer better maneuverability and more fuel efficiency than an aircraft using a runway. However, a truly efficient model has yet to be developed which realizes this. While there exist several helicopters in the world, there does not exist a convention winged aircraft with VTOL capabilities. Vertical Take Off and Landing aims to eliminate the need for runways for aircrafts. In theory, it should offer better maneuverability and more fuel efficiency than an aircraft using a runway. However, a truly efficient model has yet to be developed which realizes this. While there exist several helicopters in the world, there does not exist a convention winged aircraft with VTOL capabilities. </p>
+				<p id="lg">Vertical Take Off and Landing aims to eliminate the need for runways for aircrafts. In theory, it should offer better maneuverability and more fuel efficiency than an aircraft using a runway. However, a truly efficient model has yet to be developed which realizes this. While there exist several helicopters in the world, there does not exist a convention winged aircraft with VTOL capabilities. Vertical Take Off and Landing aims to eliminate the need for runways for aircrafts. In theory, it should offer better maneuverability and more fuel efficiency than an aircraft using a runway. However, a truly efficient model has yet to be developed which realizes this. While there exist several helicopters in the world, there does not exist a convention winged aircraft with VTOL capabilities. </p>
 			</div>
 		</div>
 	</div>
 	
 	<div class="services">
 		<div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                    <h3>Landing Gear</h3>
+                    <h3 id="lg">Landing Gear</h3>
 			<hr>
 			<div  class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<img src="images/projects/landinggear1.jpg" class="img-responsive ">
@@ -185,7 +188,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 							<div class="media-left">
 								<i class="fa fa-book"></i>						
 							</div>
-							<div class="media-body">
+							<div  id="sol" class="media-body">
 								<h4 class="media-heading">Approach</h4>
 								<p>We are learning the basic designing criterion for landing gear, calculations involved, prominent designs, metallurgy etc.</p>
 							</div>
@@ -304,7 +307,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 					<div class="col-md-4">
 						<ul class="social-network">
                                                        <li><a href="https://www.facebook.com/UnwiredAeroNitCalicut/" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="https://www.linkedin.com/company/aerounwired/" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://twitter.com/aero_unwired" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="https://www.linkedin.com/company/aerounwired/" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
 							<li><a href="https://www.youtube.com/channel/UCjcbbcK1VAgwusNnKY3JDrQ" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
 						</ul>	
