--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div style="margin-left: 30px ">
-							<img style="width: 100px;height: 70px" src="images/aelogo.jpg">
+							<img class="logo1" src="images/aelogo.jpg" >
 						</div>
                                             
 					</div>
