--- a/alumni.html
+++ b/alumni.html
@@ -405,7 +405,7 @@
                             
                             <div class="college">
                                 <div class="col-md-6 c" >
-                                    <img class="logo2" src="images/college/NITC_LOGO.png">
+                                  <a href="http://www.nitc.ac.in"><img class="logo2" src="images/college/NITC_LOGO.png"></a>
                                    
                                 <div class=" cent" style="padding:5px" >
                                   <p class="dis">National Institute of Technology<br>Calicut</p>
