--- a/project.html
+++ b/project.html
@@ -125,7 +125,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 	
 	<div class="sub-services">
 		<div class="container wow fadeInDown" delay-wow-duration="2000ms" delay-wow-delay="600ms">
-                    <h3 ><b>Vertical Landing And Take-Off ( VTOL )</b></h3>
+                    <h3><b>Vertical Landing And Take-Off ( VTOL )</b></h3>
                     <hr>
 			<div class="col-md-6">
 				<div class="media">
@@ -193,7 +193,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 							<div class="media-left">
 								<i class="fa fa-book"></i>						
 							</div>
-							<div  id="sol" class="media-body">
+							<div   class="media-body">
 								<h4 class="media-heading">Approach</h4>
 								<p>We are learning the basic designing criterion for landing gear, calculations involved, prominent designs, metallurgy etc.</p>
 							</div>
@@ -216,7 +216,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
 	</div>	
       <div class="sub-services">
 		<div class="container wow fadeInDown" delay-wow-duration="2000ms" delay-wow-delay="600ms">
-                    <h3><b>Solar Powered Aircraft</b></h3>
+                    <h3><a id="sol"><b>Solar Powered Aircraft</b></a></h3>
                     <hr>
 			<div class="col-md-6">
 				<div class="media">
@@ -311,7 +311,7 @@ search and rescue, surveillance and traffic monitoring [2] etc.</p>
                             
                             <div class="college">
                                 <div class="col-md-6 c" >
-                                    <img class="logo2" src="images/college/NITC_LOGO.png">
+                                   <a href="http://www.nitc.ac.in"><img class="logo2" src="images/college/NITC_LOGO.png"></a>
                                    
                                 <div class=" cent" style="padding:5px" >
                                   <p class="dis">National Institute of Technology<br>Calicut</p>
