--- a/project.html
+++ b/project.html
@@ -259,6 +259,52 @@ search and rescue, surveillance and traffic monitoring etc.</p>
 			</div>
 		</div>
 	</div>
+    <div class="services">
+		<div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+                    <h3 id="lg">Landing Gear</h3>
+			<hr>
+			<div  class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+				<img src="images/projects/landinggear1.jpg" class="img-responsive ">
+                                <p>With the fast development of the world aerospace, the design and manufacture of landing gear are becoming hot topics nowadays. The landing gear is an important bearing support structure of aircraft, during the safe landing process of aircraft, larger load and stronger vibration between the aircraft and the ground will be produced, the buffer system of aircraft would absorb and consume huge impact energy, so the quality of the landing gear buffer system influence the safety and comfort of aircraft directly.</p>
+			</div>
+			
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-pencil"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Aim</h4>
+								<p>Designing an efficient and highly effective undercarriage system, that can be modified and  used for any RC aircraft.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-book"></i>						
+							</div>
+							<div   class="media-body">
+								<h4 class="media-heading">Approach</h4>
+								<p>We are learning the basic designing criterion for landing gear, calculations involved, prominent designs, metallurgy etc.</p>
+							</div>
+						</li>
+						<!--<li>
+							<div class="media-left">
+								<i class="fa fa-rocket"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Progress</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat 
+								libero, pulvinar tincidunt leo consectetur eget.</p>
+							</div>
+						</li>-->
+					</ul>
+				</div>
+			</div>
+                        
+		</div>
+	</div>	
 		<div class="services">
 		<div class="container wow fadeInDown" data-wow-duration="2000ms" data-wow-delay="600ms">
                     <h3>Hovercraft</h3>
