--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
 				</div>
 				<div class="col-md-3">
 					<div class="hi-icon-wrap hi-icon-effect wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="600ms">
-                                            <a href="project.html#lg" title="View project thurst vectoring"><i  class="fa "><img width="50px" height="50px" src="images/projects/thrust.png"></i></a>	
+                                            <a href="project.html#tv" title="View project thrust vectoring"><i  class="fa "><img width="50px" height="50px" src="images/projects/thrust.png"></i></a>	
 						<h2>Thrust Vectoring</h2>
 						<p>Efficient manuverability</p>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" >
-                                            <a href="project.html#sol." title="View project Rocket Aeronautics"><i class="fa"><img width="50px" height="50px" src="images/projects/rocket.png"></i></a>	
+                                            <a href="project.html#fin" title="View project Rocket Aerodynamics"><i class="fa"><img width="50px" height="50px" src="images/projects/rocket.png"></i></a>	
 						<h2>Rocket Aerodynamics</h2>
 						<p>Fin Stabilization</p>
 					</div>
@@ -285,7 +285,7 @@
                                         <div id="text1">
                                             
                                             <p class="hdd"> Why do we need your help?<br></p>
-                                            <p class="hdd1">Unfortunately, a major problem in participating in the above events is the lack of funds. Aero-Unwired intends to take part in the SAE ADC 2019 and Pragyan 2019. The team requires money for the fabrication of the plane, which requires balsa and for the electronic components which are used to control the plane. We are also involved in community projects for which we are short of money. Both events are coming soon and we need to start on these as soon as possible.
+                                            <p class="hdd1">Unfortunately, a major problem in participating in the above events is the lack of funds. Aero-Unwired intends to take part in the SAE ADC 2020 and Pragyan 2020. The team requires money for the fabrication of the plane, which requires balsa and for the electronic components which are used to control the plane. We are also involved in community projects for which we are short of money. Both events are coming soon and we need to start on these as soon as possible.
                                                 <br><br>Proceed to Milaap Crowdfunding site <br><a class="hdd2" href="https://milaap.org/fundraisers/aerounwired">Milaap</a></p>
                                         <p class="hdd1">Contact Marketing Head for more info<br><a class="hdd2" href="contact.html">Click here</a></p>
                                         </div>
