--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<section id="main-slider" class="no-margin">
 			<div class="carousel slide">
 				<div class="carousel-inner">
-					<div class="item active" style="background-image: url(images/plane.jpg)">
+					<div class="item active" style="background-image: url(https://res.cloudinary.com/di67pwwso/image/upload/v1572014890/plane_chjrou.jpg)">
 						<div class="container">
 							<div class="row slide-margin">
 								<div class="col-sm-6">
