--- a/about.html
+++ b/about.html
@@ -296,7 +296,7 @@
 
 				<div class="yr">THIRD YEARS</div>
 				<div class="student wow fadeInDown ">
-					<img class="img-stu" src="images/about/members/Aashish Ramesh.jpeg" alt="">
+					<img class="img-stu" src="images/about/members/Aashish Ramesh.jpg" alt="">
 
 					<h4> Aashish R </h4>
 					<p class="fac-p"><b>Team Captain / Marketing Head</b></p>
