--- a/about.html
+++ b/about.html
@@ -224,13 +224,13 @@
 
 
 				<div class="mentor wow fadeInDown " data-wow-duration="1000ms" data-wow-delay="300ms">
-					<img class="img-fac" src="images/alumni/sreenath.jpg" alt="">
+					<img class="img-fac" src="images/about/sreenath.jpg" alt="">
 					<h4>Mr Sreenath A.M.</h4>
 					<p class="fac-p"><b>Assistant Professor | Faculty Advisor</b><br>Mechanical Engineering
 						Department,<br> NIT-Calicut, Kozhikode, PIN: 673601</p>
 				</div>
 				<div class="mentor wow fadeInDown " data-wow-duration="1000ms" data-wow-delay="600ms">
-					<img class="img-fac" src="images/alumni/jothi.jpg" alt="">
+					<img class="img-fac" src="images/about/jothi.jpg" alt="">
 
 					<h4>Dr.T. J. Sarvoththama Jothi </h4>
 					<p class="fac-p"><b>Assistant Professor | Faculty Advisor</b><br>Mechanical Engineering
