--- a/about.html
+++ b/about.html
@@ -245,7 +245,7 @@
 				</div>
 				<div class="yr">FOURTH YEARS</div>
 				<div class="student wow fadeInDown ">
-					<img class="img-stu" src="images/about/members/Akshay Sudhakaran.jpeg" alt="">
+					<img class="img-stu" src="images/about/members/Akshay Sudhakaran.jpg" alt="">
 
 					<h4>Akshay S Menon </h4>
 					<p class="fac-p"><b>Secretary</b></p>
@@ -263,7 +263,7 @@
 					<p class="fac-p"><b>Member</b></p>
 				</div>
 				<div class="student wow fadeInDown ">
-					<img class="img-stu" src="images/about/members/akshay v.p.png" alt="">
+					<img class="img-stu" src="images/about/members/akshay v.p.jpg" alt="">
 
 					<h4>Akshay V P </h4>
 					<p class="fac-p"><b>Member</b></p>
@@ -341,7 +341,7 @@
 
 
 				<div class="student wow fadeInDown ">
-					<img class="img-stu" src="images/about/members/banoth veeranna.png" alt="">
+					<img class="img-stu" src="images/about/members/banoth veeranna.jpg" alt="">
 
 					<h4>Banooth Veeranna</h4>
 					<p class="fac-p"><b>Member</b></p>
