--- a/about.html
+++ b/about.html
@@ -483,7 +483,7 @@
 					<p class="fac-p"><b>Member</b></p>
 				</div>
 				<div class="student wow fadeInDown ">
-					<img class="img-stu" src="images/about/members/Michael Antony.jpeg" alt="">
+					<img class="img-stu" src="images/about/members/Michael Antony.jpg" alt="">
 
 					<h4> Michael Antony</h4>
 					<p class="fac-p"><b>Member</b></p>
