--- a/about.html
+++ b/about.html
@@ -430,8 +430,8 @@
 
 
 				<div class="student wow fadeInDown ">
-					<img class="img-stu" src="images/about/members/amaya t.jpg" alt="">
-
+					<img class="img-stu" style="opacity: .2;" src="images/about/members/amaya t.jpg" alt="">
+				
 					<h4>Amaya T</h4>
 					<p class="fac-p"><b>Member</b></p>
 				</div>
