--- a/about.html
+++ b/about.html
@@ -430,7 +430,7 @@
 
 
 				<div class="student wow fadeInDown ">
-					<img class="img-stu" style="opacity: .5;" src="images/about/members/amaya t.jpg" alt="">
+					<img class="img-stu" style="opacity: 1;" src="images/about/members/amaya t.jpg" alt="">
 				
 					<h4>Amaya T</h4>
 					<p class="fac-p"><b>Member</b></p>
