--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="2100ms">
 								<i class="fa"><img width="50px" height="50px"
-										src="images/projects/autonomousaircraft.png"></i>
+										src="https://res.cloudinary.com/di67pwwso/image/upload/v1583592109/Aerounwired/projects/autonomousaircraft_braktc.jpg"></i>
 								<h2>Autonomous Aircraft</h2>
 								<p>New Era of Advancements</p>
 							</div>
