--- a/about.html
+++ b/about.html
@@ -246,7 +246,8 @@
 					<p class="fac-p"><b>Member</b></p>
 				</div>
 
-
+				<div class="rectangle">
+				</div>
 				<div class="yr">THIRD YEARS</div>
 				<div class="student wow fadeInDown ">
 					<img class="img-stu" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506660/Aerounwired/about/members/Aashish_Ramesh_oipyvo.jpg" alt="">
@@ -337,7 +338,9 @@
 
 					<h4>Swanith K </h4>
 					<p class="fac-p"><b>Member</b></p>
-				</div>\
+				</div>
+				<div class="rectangle">
+				</div>
 				<div class="yr">SECOND YEARS</div>
 				<div class="student wow fadeInDown ">
 					<img class="img-stu" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506657/Aerounwired/about/members/akhil_g.krishna_rb1pbu.jpg" alt="">
